Update various spacing and padding issues, add new custom css, remove unneeded css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 :root {
-  --dawntreader-primary: linear-gradient(to right, yellow, white);
-  --dawntreader-pink: rgb(238, 150, 148);
-  --dawntreader-yellow: rgb(252, 247, 173);
+  --dawntreader-primary: linear-gradient(to right, rgb(230, 230, 2), white);
+  --dawntreader-pink: rgb(212, 121, 119);
+  --dawntreader-yellow: rgb(224, 219, 141);
   --dawntreader-orange: rgb(251, 204, 73);
   --dawntreader-red: rgb(207, 91, 65);
   --dawntreader-dark-red: rgb(112, 38, 25);
-  --dawntreader-blue: rgb(123, 141, 243);
+  --dawntreader-blue: rgb(80, 99, 206);
 
   --dawntreader-header: 'Chakra Petch', sans-serif;
   --dawntreader-ff: 'Questrial', sans-serif;
@@ -15,6 +15,7 @@
   --main-body: calc(100vh - var(--header) - var(--footer));
 
   --join-round-corners: 10px;
+  --floating-card: 2px 2px 0.5rem black;
 }
 
 /*  
@@ -45,7 +46,6 @@
 
 html {
   font-family: var(--dawntreader-header);
-  line-height: 1.5;
   font-size: 1.125rem;
 }
 
@@ -72,18 +72,22 @@ select {
 header,
 .header {
   height: var(--header);
-}
 
-header {
-  position: sticky;
-  top: 0;
-  z-index: 1;
+  & h1 {
+    margin-block: 0.2rem;
+  }
 }
 
 h1,
 h2,
 h3 {
   font-family: var(--dawntreader-ff);
+  line-height: 1.3;
+  font-size: 1.8em;
+}
+
+p {
+  line-height: 1.5;
 }
 
 main,
@@ -93,23 +97,12 @@ nav {
 
 main {
   overflow-x: auto;
-  background-color: black;
-  position: relative;
-  isolation: isolate;
-}
-
-main::after {
-  content: '';
-  position: fixed;
-  z-index: -1;
-  inset: 0;
-  background: black;
-  opacity: 0.5;
-
-  background: center/100% no-repeat scroll
-    url(../fc-screenshots/fc-icons/dawntreaders.jpg);
-  background-size: cover;
-  background-position: center;
+  /* background: linear-gradient(
+    to bottom right,
+    var(--dawntreader-pink),
+    var(--dawntreader-blue)
+  ); */
+  background: #eee;
 }
 
 footer {
@@ -125,9 +118,8 @@ footer {
 }
 
 h2 {
-  /* background-color: var(--dawntreader-yellow); */
   display: inline-block;
-  padding: 0.5rem 2rem;
+  padding: 1rem 0.5rem;
   border-radius: 10px;
 }
 
@@ -213,9 +205,10 @@ h2 {
   }
 
   & div {
-    background-color: var(--dawntreader-pink);
+    background-color: var(--dawntreader-yellow);
     border-radius: var(--join-round-corners);
-    padding: 2rem;
+    box-shadow: var(--floating-card);
+    padding: 1rem;
   }
 }
 
@@ -232,26 +225,25 @@ h2 {
   --card-br: 20px;
   max-width: 350px;
   height: 350px;
-  border: 2px solid black;
   border-radius: var(--card-br);
-  background-color: var(--dawntreader-pink);
+  background-color: var(--dawntreader-yellow);
+  box-shadow: var(--floating-card);
 
   & h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 2px solid black;
-    background-color: var(--dawntreader-red);
   }
 
   & p {
-    padding: 1rem;
+    padding: 0 1rem;
   }
 }
 
 .dawntreaders-join,
 .join-now {
-  background-color: var(--dawntreader-pink);
+  background-color: var(--dawntreader-yellow);
+  box-shadow: var(--floating-card);
   padding: 2rem;
   max-width: 1280px;
   width: 100%;
@@ -267,11 +259,6 @@ h2 {
   & > div {
     max-width: max(300px, 70vw);
   }
-}
-
-.join-now,
-.why-join {
-  text-align: center;
 }
 
 .join-icons {
@@ -322,6 +309,7 @@ h2 {
   .card {
     width: 100%;
     max-width: 720px;
+    padding-block: 1rem;
   }
 
   .why-join {
@@ -371,7 +359,7 @@ h2 {
 
 .member-image {
   margin: auto;
-  max-width: min(600px, 44vw);
+  max-width: min(600px, 38vw);
 }
 
 @media screen and (max-width: 1080px) {
@@ -386,9 +374,10 @@ h2 {
   }
 
   .member-portraits {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 1fr;
-    gap: 20px;
+    gap: 1rem;
+    text-align: center;
   }
 }
 
@@ -417,7 +406,7 @@ h2 {
 
 .events > aside {
   grid-row: 1 / 2;
-  background-color: purple;
+  background-color: var(--dawntreader-blue);
 }
 
 .event-sidebar {
@@ -438,11 +427,11 @@ h2 {
 
   & hr {
     width: 100%;
-    border-color: red;
+    border: 3px solid;
   }
 
   & a {
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: black;
     text-decoration: none;
   }
@@ -456,7 +445,7 @@ h2 {
   overflow-y: auto;
 
   & > article {
-    background-color: var(--dawntreader-pink);
+    background-color: var(--dawntreader-yellow);
     margin: 20px;
   }
 }
@@ -544,12 +533,17 @@ article > .current-events {
   gap: 3rem;
   margin: 20px 0;
 
-  /* & :is(p, ul) {
-    max-width: 80ch;
-  } */
-
   & ul {
     list-style-type: none;
+  }
+
+  & section {
+    background: var(--dawntreader-yellow);
+    box-shadow: var(--floating-card);
+    border-radius: var(--join-round-corners);
+    padding: 2rem;
+    max-width: 1280px;
+    width: 100%;
   }
 }
 
